fixes home link on dark mode

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -33,6 +33,11 @@
       color: var(--black);
     }
 
+    a.home,
+    a.home:visited {
+      color: var(--dark);
+    }
+
     a,
     a:visited {
       color: var(--black);
